# cmd/api/routes/establishments.go
@@ -1,14 +1,18 @@
 package routes
 
-import "github.com/gofiber/fiber/v2"
+import (
+	"appGestion/cmd/api/controllers/establishment"
+	"appGestion/cmd/api/middleware"
 
-func EntablishmentsRoutes(app *fiber.App) {
-	users := app.Group("/entablishments")
-	users.Get("/", getEntablishments)       // GET /users
-	users.Get("/:id", getEntablishmentById) // GET /users/:id
-	users.Post("/", createEntablishment)    // POST /users
+	"github.com/gofiber/fiber/v2"
+)
+
+func EntablishmentsRoutes(app *fiber.App, ctrl *establishment.Controller) {
+	establishments := app.Group("/establishments")
+	establishments.Get("/", getEntablishments)       // GET /users
+	establishments.Get("/:id", getEntablishmentById) // GET /users/:id
+	establishments.Post("/create", middleware.RequireAuth(true), ctrl.Create)    // POST /users
 }
 
 func getEntablishments(c *fiber.Ctx) error       { return c.SendString("Lista de usuarios") }
 func getEntablishmentById(c *fiber.Ctx) error    { return c.SendString("Usuario ID: " + c.Params("id")) }
-func createEntablishment(c *fiber.Ctx) error     { return c.SendString("Usuario creado") }
